@@ -550,11 +550,8 @@ argument_list|,
 literal|"\\\\."
 argument_list|)
 expr_stmt|;
-name|String
-name|acceptNamePattern
-init|=
-literal|".*?"
-operator|+
+name|namePattern
+operator|=
 name|IvyPatternHelper
 operator|.
 name|substituteToken
@@ -563,19 +560,9 @@ name|namePattern
 argument_list|,
 name|token
 argument_list|,
-literal|"([^"
-operator|+
-name|fileSep
-operator|+
-literal|"]+)"
+literal|"(.+)"
 argument_list|)
-operator|+
-literal|"($|"
-operator|+
-name|fileSep
-operator|+
-literal|".*)"
-decl_stmt|;
+expr_stmt|;
 name|Pattern
 name|p
 init|=
@@ -583,7 +570,7 @@ name|Pattern
 operator|.
 name|compile
 argument_list|(
-name|acceptNamePattern
+name|namePattern
 argument_list|)
 decl_stmt|;
 for|for
@@ -622,6 +609,16 @@ operator|.
 name|matcher
 argument_list|(
 name|path
+operator|.
+name|substring
+argument_list|(
+name|root
+operator|.
+name|length
+argument_list|()
+operator|+
+literal|1
+argument_list|)
 argument_list|)
 decl_stmt|;
 if|if
