@@ -1,0 +1,159 @@
+begin_unit|revision:1.0.0;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/*  *  Licensed to the Apache Software Foundation (ASF) under one or more  *  contributor license agreements.  See the NOTICE file distributed with  *  this work for additional information regarding copyright ownership.  *  The ASF licenses this file to You under the Apache License, Version 2.0  *  (the "License"); you may not use this file except in compliance with  *  the License.  You may obtain a copy of the License at  *  *      http://www.apache.org/licenses/LICENSE-2.0  *  *  Unless required by applicable law or agreed to in writing, software  *  distributed under the License is distributed on an "AS IS" BASIS,  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *  See the License for the specific language governing permissions and  *  limitations under the License.  *  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|plugins
+operator|.
+name|resolver
+operator|.
+name|util
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|plugins
+operator|.
+name|repository
+operator|.
+name|file
+operator|.
+name|FileRepository
+import|;
+end_import
+
+begin_import
+import|import
+name|junit
+operator|.
+name|framework
+operator|.
+name|TestCase
+import|;
+end_import
+
+begin_class
+specifier|public
+class|class
+name|ResolverHelperTest
+extends|extends
+name|TestCase
+block|{
+specifier|public
+name|void
+name|testListTokenValuesForIvy1238
+parameter_list|()
+block|{
+name|FileRepository
+name|rep
+init|=
+operator|new
+name|FileRepository
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"."
+argument_list|)
+operator|.
+name|getAbsoluteFile
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|String
+index|[]
+name|revisions
+init|=
+name|ResolverHelper
+operator|.
+name|listTokenValues
+argument_list|(
+name|rep
+argument_list|,
+literal|"test/repositories/IVY-1238/ivy-org/modA/v[revision]/ivy.xml"
+argument_list|,
+literal|"revision"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|revisions
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|revisions
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|Arrays
+operator|.
+name|sort
+argument_list|(
+name|revisions
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"1.0"
+argument_list|,
+name|revisions
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"2.0"
+argument_list|,
+name|revisions
+index|[
+literal|1
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
